--- a/Saved/Config/Windows/Editor.ini
+++ b/Saved/Config/Windows/Editor.ini
@@ -37,12 +37,12 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 					]\
 				),\
 				(\
-					"SizeCoefficient": 0.69999998807907104,\
+					"SizeCoefficient": 0.69975578784942627,\
 					"Type": "Splitter",\
 					"Orientation": "Orient_Horizontal",\
 					"Nodes": [\
 						(\
-							"SizeCoefficient": 0.15000000596046448,\
+							"SizeCoefficient": 0.13445951044559479,\
 							"Type": "Splitter",\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
@@ -73,7 +73,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 							]\
 						),\
 						(\
-							"SizeCoefficient": 0.62962961196899414,\
+							"SizeCoefficient": 0.64517045021057129,\
 							"Type": "Stack",\
 							"HideTabWell": true,\
 							"ForegroundTab": "SlatePreview",\
@@ -99,7 +99,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 					]\
 				),\
 				(\
-					"SizeCoefficient": 0.30000001192092896,\
+					"SizeCoefficient": 0.30023732781410217,\
 					"Type": "Splitter",\
 					"Orientation": "Orient_Horizontal",\
 					"Nodes": [\
@@ -128,6 +128,118 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 								(\
 									"TabId": "CompilerResults",\
 									"TabState": "OpenedTab"\
+								)\
+							]\
+						)\
+					]\
+				)\
+			]\
+		)\
+	]\
+)
+WidgetBlueprintEditor_Graph_Layout_v1=(\
+	"Type": "Layout",\
+	"Name": "WidgetBlueprintEditor_Graph_Layout_v1",\
+	"PrimaryAreaIndex": 0,\
+	"Areas": [\
+		(\
+			"SizeCoefficient": 1,\
+			"Type": "Area",\
+			"Orientation": "Orient_Vertical",\
+			"WindowPlacement": "Placement_NoWindow",\
+			"Nodes": [\
+				(\
+					"SizeCoefficient": 0.18672099709510803,\
+					"Type": "Stack",\
+					"HideTabWell": true,\
+					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
+					"Tabs": [\
+						(\
+							"TabId": "AssetEditorToolkit_Toolbar",\
+							"TabState": "OpenedTab"\
+						)\
+					]\
+				),\
+				(\
+					"SizeCoefficient": 1,\
+					"Type": "Splitter",\
+					"Orientation": "Orient_Horizontal",\
+					"Nodes": [\
+						(\
+							"SizeCoefficient": 0.15000000596046448,\
+							"Type": "Splitter",\
+							"Orientation": "Orient_Vertical",\
+							"Nodes": [\
+								(\
+									"SizeCoefficient": 0.5,\
+									"Type": "Stack",\
+									"HideTabWell": false,\
+									"ForegroundTab": "MyBlueprint",\
+									"Tabs": [\
+										(\
+											"TabId": "MyBlueprint",\
+											"TabState": "OpenedTab"\
+										)\
+									]\
+								),\
+								(\
+									"SizeCoefficient": 0.5,\
+									"Type": "Stack",\
+									"HideTabWell": false,\
+									"ForegroundTab": "Inspector",\
+									"Tabs": [\
+										(\
+											"TabId": "Inspector",\
+											"TabState": "OpenedTab"\
+										)\
+									]\
+								)\
+							]\
+						),\
+						(\
+							"SizeCoefficient": 0.69999998807907104,\
+							"Type": "Splitter",\
+							"Orientation": "Orient_Vertical",\
+							"Nodes": [\
+								(\
+									"SizeCoefficient": 0.80000001192092896,\
+									"Type": "Stack",\
+									"HideTabWell": false,\
+									"ForegroundTab": "Document : 1",\
+									"Tabs": [\
+										(\
+											"TabId": "Document",\
+											"TabState": "ClosedTab"\
+										)\
+									]\
+								),\
+								(\
+									"SizeCoefficient": 0.20000000298023224,\
+									"Type": "Stack",\
+									"HideTabWell": false,\
+									"ForegroundTab": "None",\
+									"Tabs": [\
+										(\
+											"TabId": "CompilerResults",\
+											"TabState": "ClosedTab"\
+										),\
+										(\
+											"TabId": "FindResults",\
+											"TabState": "ClosedTab"\
+										)\
+									]\
+								)\
+							]\
+						),\
+						(\
+							"SizeCoefficient": 0.15000000596046448,\
+							"Type": "Stack",\
+							"HideTabWell": false,\
+							"ForegroundTab": "None",\
+							"Tabs": [\
+								(\
+									"TabId": "PaletteList",\
+									"TabState": "ClosedTab"\
 								)\
 							]\
 						)\
