--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -6,6 +6,11 @@ Paths=../../../Engine/Plugins/Media/MediaCompositing/Content
 Paths=../../../Engine/Plugins/Runtime/AppleARKit/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
+Paths=../../../Engine/Plugins/Editor/CryptoKeys/Content
+Paths=../../../Engine/Plugins/Editor/MeshEditor/Content
+Paths=../../../Engine/Plugins/Enterprise/DatasmithContent/Content
+Paths=../../../Engine/Plugins/Lumin/MagicLeap/Content
+Paths=../../../Engine/Plugins/Lumin/MagicLeapEmulator/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnableTransport=True
@@ -28,5 +33,16 @@ SDKPath=(Path="")
 NDKPath=(Path="")
 ANTPath=(Path="")
 JavaPath=(Path="")
+
+[MagicLeapSettings]
+WindowMirrorMode=1
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
 
 
