--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -159,6 +159,8 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap:PersistentLevel.FirstPersonExampleMap
+OpenAssetsAtExit=/Game/Widgets/HeagneyHUD.HeagneyHUD
 
 [DetailCategories]
 ParticleSystem.ParticleSystem=False
@@ -466,6 +468,17 @@ K2Node_CustomEvent.Inputs=True
 K2Node_CallFunction.Graph=True
 ObjectProperty.Events=True
 K2Node_VariableSet.Events=True
+HeagneyHUD_C.Default=True
+HeagneyHUD_C.Appearance=True
+HeagneyHUD_C.Designer=True
+HeagneyHUD_C.Input=True
+HeagneyHUD_C.Interaction=True
+HeagneyHUD_C.Layout=True
+HeagneyHUD_C.Behavior=True
+HeagneyHUD_C.Render Transform=True
+HeagneyHUD_C.Performance=True
+HeagneyHUD_C.Clipping=True
+HeagneyHUD_C.Navigation=True
 
 [DetailPropertyExpansion]
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" "
@@ -503,8 +516,8 @@ DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
-Widget="\"Object.Appearance.Brush\" "
-Visual="\"Object.Appearance.Brush\" "
+Widget=
+Visual=
 Image="\"Object.Appearance.Brush\" "
 
 [PlacementMode]
@@ -532,7 +545,7 @@ RecentlyPlaced=/Game/Particles/SandStorm.SandStorm;
 LightDir=P=-44.999969 Y=-179.999969 R=0.000000
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
+ScreenPosition=X=-1606.000 Y=84.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
